--- a/application/admin/view/login/index.html
+++ b/application/admin/view/login/index.html
@@ -21,7 +21,7 @@
         <ul>
             <li><a href="javascript:void(0)" target="_blank">帮助</a></li>
             <li>
-                <a href="http://sw.bos.baidu.com/sw-search-sp/software/9e6bc213b9d0b/ChromeStandalone_63.0.3239.132_Setup.exe">推荐使用谷歌浏览器</a>
+                <a href="https://www.google.cn/chrome/">推荐使用谷歌浏览器</a>
             </li>
         </ul>
     </div>
