--- a/application/admin/view/public/main.html
+++ b/application/admin/view/public/main.html
@@ -13,6 +13,7 @@
         <link href="__STATIC__/theme/css/animate.css?v={:date('ymd')}" rel="stylesheet">
         {block name="style"}{/block}
         <script>window.ROOT_URL = '__ROOT__';</script>
+	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=0NEpMPR6oR0Q9GSSr5wmmZxCBEiU10tk"></script>
         <script src="__STATIC__/plugs/jquery/pace.min.js"></script>
         <script src="__STATIC__/plugs/layui/layui.all.js"></script>
         <script src="__STATIC__/admin.js"></script>
