--- a/application/index/view/index/user.html
+++ b/application/index/view/index/user.html
@@ -1,7 +1,7 @@
 {include file="common/header"/}
 <div class='layout bg-orange user-top'>
     <img src='/static/theme/img/headimg.png'>
-    <h5 class='text-center text-muted'>你的昵称</h5>
+    <h5 class='text-center text-muted'>我的昵称</h5>
 </div>
 <div class='layout'>
     <div class='user-line text-muted'>
