--- a/application/index/view/index/user.html
+++ b/application/index/view/index/user.html
@@ -41,6 +41,12 @@
 	<span class="float-right fa fa-chevron-right" aria-hidden="true"></span>
 	<hr>
     </div>
+    <a href="/" class='d-none user-line text-muted'>
+	<span class="text-danger fa fa-power-off" aria-hidden="true"></span>
+	　退出
+	<span class="float-right fa fa-chevron-right" aria-hidden="true"></span>
+	<hr>
+    </a>
 </div>
 {include file="common/menu"/}
 {include file="common/footer"/}
