--- a/application/index/view/index/user.html
+++ b/application/index/view/index/user.html
@@ -3,7 +3,7 @@
     {empty name="info['headimgurl']"}
     <img src='/static/theme/img/headimg.png'>
     {else/}
-    <img src='{$info.headimgurl}'>
+    <img style="border-radius:50%;" src='{$info.headimgurl}'>
     {/empty}
     <h5 class='text-center text-muted'>{$info.nickname}</h5>
 </div>
