--- a/application/cash/view/common/menu.html
+++ b/application/cash/view/common/menu.html
@@ -1,6 +1,6 @@
 <div style="height:60px;"></div>
 <nav class="bottom-menu navbar fixed-bottom navbar-light bg-white">
     <a class="navbar-brand {eq name='title' value='钱包'}active{/eq}" href="{:url('index/index')}"><span class="fa fa-shopping-bag"></span><br>钱包</a>
-    <!--    <a class="navbar-brand {eq name='title' value='油卡'}active{/eq}" href="{:url('index/card')}"><span class="fa fa-beer"></span><br>油卡</a> -->
+    <a class="navbar-brand {eq name='title' value='油卡'}active{/eq}" href="{:url('index/card')}"><span class="fa fa-beer"></span><br>油卡</a>
     <a class="navbar-brand {eq name='title' value='我的'}active{/eq}" href="{:url('index/user')}"><span class="fa fa-user"></span><br>我的</a>
 </nav>
