--- a/application/cash/view/index/card.html
+++ b/application/cash/view/index/card.html
@@ -10,20 +10,7 @@
 </div>
 
 <div class="carpet">
-    <h4>加油记录：<a href="{:url('acount/acountList')}" class="fr">查看详细</a></h4>
-    <div class="top-line">
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th>金额</th>
-                <th>类型</th>
-                <th>备注</th>
-                <th>状态</th>
-            </tr>
-            </thead>
-            <tbody>
-	    </tbody>
-        </table>
-    </div>
+    <h4>加油记录：<a href="{:url('index/oil')}" class="fr">查看详细</a></h4>
+</div>
 {include file="common/menu"/}
 {include file="common/footer"/}
