--- a/application/cash/view/admin_card/index.html
+++ b/application/cash/view/admin_card/index.html
@@ -1,6 +1,9 @@
 {extend name='admin@public/content'}
 
 {block name="button"}
+<!--{if auth("$classuri/addmore")}-->
+<button data-modal='{:url("$classuri/addmore")}' data-title="添加油卡" class='layui-btn layui-btn-sm layui-btn-primary'>批量添加</button>
+<!--{/if}-->
 <!--{if auth("$classuri/add")}-->
 <button data-modal='{:url("$classuri/add")}' data-title="添加油卡" class='layui-btn layui-btn-sm layui-btn-primary'>添加油卡</button>
 <!--{/if}-->
