--- a/application/cash/view/admin_user/index.html
+++ b/application/cash/view/admin_user/index.html
@@ -45,6 +45,7 @@
             </th>
             <th class='text-left nowrap'>ID</th>
             <th class='text-left nowrap'>用户名</th>
+            <th class='text-left nowrap'>比例</th>
             <th class='text-left nowrap'>余额</th>
             <th class='text-left nowrap'>站点</th>
             <th class='text-left nowrap'>注册时间</th>
@@ -63,6 +64,9 @@
             </td>
             <td class='text-left nowrap'>
                 {$vo.username}
+            </td>
+            <td class='text-left nowrap'>
+                {$vo.scale}
             </td>
             <td class='text-left nowrap'>
                 {$vo.cash}
