--- a/application/cash/view/index/index.html
+++ b/application/cash/view/index/index.html
@@ -7,14 +7,14 @@
     当前余额(元)
     <div class="carpet" style="color:#00afec">
 	<div class="one-from-three right-line tac">¥{$total.day}<br>昨日返现</div></a>
-        <div class="one-from-three right-line tac">¥{$total.month}0<br>当月返现</div></a>
-        <div class="one-from-three tac">¥{$total.all}0<br>累计返现</div></a>
+        <div class="one-from-three right-line tac">¥{$total.month}<br>当月返现</div></a>
+        <div class="one-from-three tac">¥{$total.day_trade}<br>昨日流水</div></a>
     </div>
 </div>
 
 <div class="carpet" style="margin-top:40px;">
     <a href="{:url('index/withdraw')}"><button type="button" class="btn btn-lg btn-info w100">提现</button></a>
-</div>
+</div>s
 
 <div class="carpet">
     <h5>资金记录：</h5>
