--- a/application/cash/view/index/index.html
+++ b/application/cash/view/index/index.html
@@ -8,7 +8,7 @@
     <div class="carpet" style="color:#00afec">
 	<div class="one-from-three right-line tac">¥{$total.day}<br>昨日返现</div></a>
         <div class="one-from-three right-line tac">¥{$total.month}<br>当月返现</div></a>
-        <div class="one-from-three tac">¥{$total.day_trade}<br>昨日流水</div></a>
+        <div class="one-from-three tac">¥{$total.day_trade}<br>今日流水</div></a>
     </div>
 </div>
 
