--- a/application/cash/view/index/index.html
+++ b/application/cash/view/index/index.html
@@ -6,7 +6,7 @@
     <h1 class="pt10">￥{$info.cash}</h1>
     当前余额(元)
     <div class="carpet" style="color:#00afec">
-	<div class="one-from-three right-line tac">¥{$total.day}<br>昨日返现</div></a>
+	<div class="one-from-three right-line tac">¥{$total.day}<br>今日返现</div></a>
         <div class="one-from-three right-line tac">¥{$total.month}<br>当月返现</div></a>
         <div class="one-from-three tac">¥{$total.day_trade}<br>今日流水</div></a>
     </div>
